# Autonomous-Research-Analyst

./: .gitignore  hybrid_search_with_reranking.py  main.py  pyproject.toml
backend/engine/: data_manager.py
backend/services/: ingestion.py  test.py  vector_db.py
backend/src/: build_prompt.py  chunker.py  hybrid_search.py  main.py
backend/src/agents/: researcher.py
backend/src/engine/: data_manager.py  graph.py
backend/src/services/: ingestion.py  vector_db.py
frontend/src/: App.jsx  index.css
frontend/src/pages/: Home.jsx  QueryResponse.jsx
src/: chunker.py  generator.py  main.py
