[project]
name = "langgraph-rag-project"
version = "0.1.0"
description = "A project for building a Retrieval-Augmented Generation (RAG) system using LangGraph and LangChain."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.0",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This tells setuptools: "Don't try to find any packages to install"
packages = []
